tutorial/manifests/db/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-postgresql-webserver
spec:
  selector:
    app: test-postgresql-webserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
