tutorial/manifests/db/db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-postgresql-webserver
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  tls:
  - hosts:
    - test.k8s.golog.ch
    secretName: test-postgresql-webserver-tls
  rules:
  - host: test.k8s.golog.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-postgresql-webserver
            port:
              number: 8080
